--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>USAH LLC Corp.</title>
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <title>Speedy Freight</title>
+    <link rel="shortcut icon" href="img/logoDark.svg" type="image/x-icon">
     <meta name="description" content="">
     <meta property="og:title" content="">
     <meta property="og:description" content="">
@@ -28,28 +28,7 @@
                 </div>
                 <ul class="header-list">
                     <li class="header-item">
-                        <a href="#!" class="header-link">About</a>
-                    </li>
-                    <li class="header-item">
-                        <a href="#!" class="header-link">Shippers</a>
-                    </li>
-                    <li class="header-item">
-                        <a href="#!" class="header-link">Transporation Services</a>
-                    </li>
-                    <li class="header-item">
-                        <a href="#!" class="header-link">Lease</a>
-                    </li>
-                    <li class="header-item">
-                        <a href="#!" class="header-link">News</a>
-                    </li>
-                    <li class="header-item">
-                        <a href="#!" class="header-link">Careers</a>
-                    </li>
-                    <li class="header-item">
-                        <a href="#!" class="header-link">Contact</a>
-                    </li>
-                    <li class="header-item header-link-exit">
-                        <a href="#!" class="header-link">EXIT</a>
+                        <a href="tel:+1(513)866-0498" class="header-link">Call Us</a>
                     </li>
                 </ul>
             </div>
@@ -57,18 +36,18 @@
         <div class="header-content">
             <div class="header-content-container container">
                 <div class="header-content-info">
-                    <p class="header-content-info-name">USAH LLC Corp.</p>
+                    <p class="header-content-info-name">Speedy Freight</p>
                     <h1 class="header-content-info-title">Transportion and Freight Services in USA</h1>
                 </div>
                 <div class="header-forms">
-                    <form class="header-form">
+                    <form class="header-form" id="form-modal">
                         <p class="header-form-txt">
-                            Welcome to USAH LLC Corp, to drive with us, please fill out the form below:
+                            Welcome to Speedy Freight, to drive with us, please fill out the form below:
                         </p>
-                        <input type="text" name="" id="" placeholder="First Name">
-                        <input type="text" name="" id="" placeholder="Last Name">
-                        <input type="email" name="" id="" placeholder="E-mail">
-                        <input type="tel" name="" id="" placeholder="Phone">
+                        <input type="text" name="name" id="" placeholder="Full Name">
+                        <input type="text" name="experience" id="" placeholder="Experience">
+                        <input type="email" name="email" id="" placeholder="E-mail">
+                        <input type="tel" name="phone" id="" placeholder="Phone">
                         <a href="#!" class="form-btn">submit</a>
                         <p class="form-rules">By clicking Register, you agree on our <a href="#!"
                                 class="form-rules-link">terms and condition.</a></p>
@@ -144,7 +123,6 @@
                         <p class="service-box-txt">
                             Getting the very best commercial trucking services for your goods should never be a hassle.
                         </p>
-                        <a href="#!" class="service-box-link">Read more</a>
                     </div>
                     <div class="service-box">
                         <img src="img/service/ico2.svg" alt="" class="service-box-img">
@@ -155,7 +133,6 @@
                             we can assist you to get a fair offer
                             that will more than satisfy you.
                         </p>
-                        <a href="#!" class="service-box-link">Read more</a>
                     </div>
                     <div class="service-box">
                         <img src="img/service/ico3.svg" alt="" class="service-box-img">
@@ -165,17 +142,15 @@
                             We are always on the lookout for friendly and knowledge personnel to meet the needs of our
                             customers.
                         </p>
-                        <a href="#!" class="service-box-link">Read more</a>
                     </div>
                     <div class="service-box">
                         <img src="img/service/ico4.svg" alt="" class="service-box-img">
                         <h3 class="service-box-title">Always The Best Price
                         </h3>
                         <p class="service-box-txt">
-                            At USAH LLC Corp we will offer you
+                            At Speedy Freight LLC we will offer you
                             the safest, most efficient, and most affordable shipping experience.
                         </p>
-                        <a href="#!" class="service-box-link">Read more</a>
                     </div>
                     <div class="service-box">
                         <img src="img/service/ico5.svg" alt="" class="service-box-img">
@@ -184,7 +159,6 @@
                         <p class="service-box-txt">
                             Our mission is to give you the best transportation service on the North American continent.
                         </p>
-                        <a href="#!" class="service-box-link">Read more</a>
                     </div>
                 </div>
             </div>
@@ -212,14 +186,14 @@
                     </p>
                 </div>
                 <div class="info-blog-img">
-                    <img src="img/logoBig.png" alt="">
+                    <img src="img/3.svg" alt="">
                 </div>
             </div>
         </section>
         <section id="line">
             <div class="container">
                 <span class="line-span">For More Information, Please Call: </span>
-                <a href="tel:(847)262-9800" class="line-link">(847)262-9800</a>
+                <a href="tel:+1(513)866-0498" class="line-link">+1 (513) 866-0498</a>
             </div>
         </section>
     </main>
@@ -228,22 +202,27 @@
         <div class="container">
             <div class="footer-boxes">
                 <div class="footer-box">
-                    <h5 class="footer-title">About USAH LLC Corp</h5>
+                    <h5 class="footer-title">About Speedy Freight LLC</h5>
                     <p class="footer-txt">
-                        Our goal at USAH LLC is to give you the safest, most efficient, and most affordable shipping experience. We offer a wide range of transportation options, including flatbed, dry van, and Conestoga.
+                        Our goal at Speedy Freight LLC is to give you the safest, most efficient, and most affordable
+                        shipping experience. We offer a wide range of transportation options, including flatbed, dry
+                        van, and Conestoga.
                     </p>
                 </div>
                 <div class="footer-box">
                     <h5 class="footer-title">Have Questions?</h5>
-                    <span class="footer-span">Tel: <a href="tel:(847)262-9800" class="footer-span-link"> (847) 262-9800</a></span>
-                    <span class="footer-span">Fax: <a href="fax:(847)262-9800" class="footer-span-link"> (847) 262-9800</a></span>
-                    <span class="footer-span">eMail: <a href="mailto:D-dunitedcorp@outlook.com" class="footer-span-link"> D-dunitedcorp@outlook.com</a></span>
-                    <span class="footer-span">Web: <a href="#" class="footer-span-link"> USAH LLC Corp</a></span>
+                    <span class="footer-span">Tel: <a href="tel:+1(513)866-0498" class="footer-span-link">+1 (513)
+                            866-0498</a></span>
+                    <span class="footer-span">Fax: <a href="fax:+1(513)866-0498" class="footer-span-link">+1 (513)
+                            866-0498</a></span>
+                    <span class="footer-span">eMail: <a href="mailto:info@speedyfreight.com"
+                            class="footer-span-link">info@speedyfreight.com</a></span>
                 </div>
                 <div class="footer-box">
                     <h5 class="footer-title">Our Location</h5>
-                    <a href="#" class="footer-txt">
-                        16830 Chicago Ave Lansing, IL 60438 U.S.A.
+                    <a href="https://www.google.com/maps/place/8200+Beckett+Park+Dr/@39.3539534,-84.4629483,18z/data=!4m7!3m6!1s0x88404f8a4f5e12fd:0x811e883636deae15!4b1!8m2!3d39.3530452!4d-84.4628101!16s%2Fg%2F11cncjdh44?entry=ttu" class="footer-txt">
+                        8200 BECKETT PARK DR SUITE 139<br>
+                        WEST CHESTER, OH   45069
                     </a>
                 </div>
             </div>
